# beacon-skill

./: .gitignore  LICENSE  PUBLISH_CHECKLIST.md  README.md  SKILL.md  config.example.json  package.json  pyproject.toml
beacon_skill/: __init__.py  cli.py  codec.py  config.py  storage.py
beacon_skill/transports/: __init__.py  bottube.py  moltbook.py  rustchain.py
tests/: test_codec.py  test_rustchain.py
