[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-skill"
version = "0.1.0"
description = "Beacon - agent-to-agent pings: likes, wants, bounties, ads, and conversation starters with RTC integration."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Elyan Labs", email = "scott@elyanlabs.ai"}]
requires-python = ">=3.8"
dependencies = [
  "requests>=2.25",
  "cryptography>=41",
]
keywords = ["beacon", "openclaw", "ai-agent", "bottube", "moltbook", "rustchain", "rtc", "bounties", "ads", "pings"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://bottube.ai"
Repository = "https://github.com/Scottcjn/beacon-skill"
Issues = "https://github.com/Scottcjn/beacon-skill/issues"

[project.scripts]
beacon = "beacon_skill.cli:main"

[tool.setuptools.packages.find]
include = ["beacon_skill*"]

