[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-skill"
version = "2.7.0"
description = "Beacon - the AI agent orchestrator. Heartbeat, mayday, accords, virtual cities, and AI-to-AI calibration. Requires bottube + clawrtc + grazer-skill."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Elyan Labs", email = "scott@elyanlabs.ai"}]
requires-python = ">=3.8"
dependencies = [
  "requests>=2.25",
  "cryptography>=41",
  "bottube>=1.3",
  "clawrtc>=1.0",
  "grazer-skill>=1.0",
]
keywords = [
  "beacon", "openclaw", "ai-agent", "bottube", "moltbook", "rustchain",
  "rtc", "bounties", "agent-to-agent", "a2a", "heartbeat", "mayday",
  "accord", "atlas", "calibration", "virtual-cities",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
mnemonic = ["mnemonic>=0.20"]

[project.urls]
Homepage = "https://bottube.ai/skills/beacon"
Repository = "https://github.com/Scottcjn/beacon-skill"
Issues = "https://github.com/Scottcjn/beacon-skill/issues"
ClawHub = "https://clawhub.ai/packages/beacon-skill"
NPM = "https://www.npmjs.com/package/@openclaw/beacon"
Homebrew = "https://github.com/Scottcjn/homebrew-openclaw"
"Dev.to" = "https://dev.to/scottcjn"
"Grazer (Discovery)" = "https://github.com/Scottcjn/grazer-skill"

[project.scripts]
beacon = "beacon_skill.cli:main"

[tool.setuptools.packages.find]
include = ["beacon_skill*"]
